--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
   },
   "homepage": "",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.3",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-ui-express": "^4.6.0",
     "validatorjs": "^3.22.1"
   },
